--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "supabase-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bastiencodes.github.io/supaparking",
   "dependencies": {
     "@supabase/supabase-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^13.3.0",
     "date-fns": "^2.25.0",
     "evergreen-ui": "^6.5.1",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
